--- a/views/farmers/edit.ejs
+++ b/views/farmers/edit.ejs
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- INCLUDE PARTIALS HERE -->
   <% include ../partials/head %>
 </head>
 
 <body class="container-fluid">
   <header>
+    <!-- INCLUDE PARTIALS HERE -->
     <% include ../partials/header %>
   </header>
 
   <main>
     <div>
-      <h3>EDIT:</h3>
+      <h3>Edit your information:</h3>
+      <!-- TODO: GET FORM INFO AND CHANGE THE ACTION AND CLASS HERE -->
       <form class="form" method="POST" action="/<%= farmer._id %>?_method=PUT">
-        <% include ../partials/farmer-form %>
+        <!-- INCLUDE PARTIAL FOR FORM HERE HERE -->
+        <!-- <% include ../partials/%> -->
         <a href="/todos/<%= todo._id %>" class="btn btn-primary">Back</a>
         <button type="submit" class="btn btn-success">Save</button>
       </form>
