--- a/views/partials/farmer-form.ejs
+++ b/views/partials/farmer-form.ejs
@@ -1,19 +1,77 @@
 <div class="form-group">
-  <label for="title">Title</label>
+  <label for="name">Name</label>
   <input type="text"
          class="form-control"
-         id="title"
-         name="title"
-         value="<%= farmer.title %>">
+         id="name"
+         name="name"
+         value="<%= farmer.name %>">
 </div>
 
-<!--unsure as to if we will use a checkbox in the future
+<div class="form-group">
+  <label for="email">Email</label>
+  <input type="text"
+         class="form-control"
+         id="email"
+         name="email"
+         value="<%= farmer.email %>">
+</div>
 
-<!<div class="form-group">
-  <label for="completed">Completed</label>
+<div class="form-group">
+  <h3>Address: </h3>
+  <label for="street">Street</label>
+  <input type="text"
+
+         class="form-control"
+         id="street"
+         name="street"
+         value="<%= farmer.address.street %>">
+</div>
+
+<div class="form-group">
+  <label for="city">City</label>
+  <input type="text"
+
+         class="form-control"
+         id="city"
+         name="city"
+         value="<%= farmer.address.city %>">
+</div>
+
+<div class="form-group">
+  <label for="state">State</label>
+  <input type="text"
+         class="form-control"
+         id="state"
+         name="state"
+         value="<%= farmer.address.state %>">
+</div>
+
+<div class="form-group">
+  <label for="zipcode">Zipcode</label>
+  <input type="text"
+         pattern=
+         class="form-control"
+         id="zipcode"
+         name="zipcode"
+         value="<%= farmer.address.zipcode %>" >
+</div>
+
+
+<div class="form-group">
+  <label for="farm_name">Farm Name</label>
+  <input type="text"
+         class="form-control"
+         id="farm_name"
+         name="farm_name"
+         value="<%= farmer.farm_name %>">
+</div>
+
+<div class="form-group">
+  <h3>Details</h3>
+  <label for="organic">Organic</label>
   <input type="checkbox"
          class="form-control"
-         id="completed"
-         name="completed">
-
-</div> -->
+         id="organic"
+         name="organic"
+         value="<%= farmer.details.organic %>">
+</div>
