--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,16 +1,7 @@
 <div>
   <h2>Signup</h2>
-  <form method="post" action="/signup">
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input class="form-control" type="text" name="email" id="email">
-    </div>
-
-    <div class="form-group">
-      <label for="email">Password</label>
-      <input class="form-control" type="password" name="password" id="password">
-    </div>
-
+  <!-- <form class = 'farmer-form' method="post" action="/signup">
+    <% include ../partials/farmer-form %>
     <input class="btn btn-default" type="submit">
-  </form>
+  </form> -->
 </div>
