Minor change to form for checkbox

--- a/views/partials/farmer-form.ejs
+++ b/views/partials/farmer-form.ejs
@@ -73,5 +73,5 @@
          class="form-control"
          id="organic"
          name="organic"
-         value="<%= farmer.details.organic %>">
+         <%= checked %> >
 </div>
