Started passport config strategies

--- a/views/farmers/signup-farmer.ejs
+++ b/views/farmers/signup-farmer.ejs
@@ -13,7 +13,7 @@
     <div>
       <h3>New Farmer</h3>
       <form class="farmer-form" action="/farmers" method="post">
-        <% include ../partials/farmer-form %>
+        <% include partials/farmer-form %>
         <a href="/farmers" class="btn btn-primary">Back</a>
         <button type="submit" class="btn btn-success">Save</button>
       </form>
