--- a/views/farmers/show.ejs
+++ b/views/farmers/show.ejs
@@ -2,7 +2,7 @@
   <h3>See farmer</h3>
   <p><b>Farmer: </b><%= farmer.name %></p>
   <p><b>Farm Name: </b><%= farmer.farm_name %></p>
-  <p><b>Location: </b><%= farmer.address.city %></p>
+  <p><b>Location: </b><%= farmer.address.street %> <%= farmer.address.city %>, <%= farmer.address.state %> <%= farmer.address.zipcode %></p>
   <p><b>Organic: </b><%= farmer.details.organic %></p>
 </div>
 <!-- GO OVER THIS -->
