--- a/views/farmers/edit.ejs
+++ b/views/farmers/edit.ejs
@@ -1,32 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <!-- INCLUDE PARTIALS HERE -->
-  <% include ../partials/head %>
-</head>
+<div>
+  <h3>Edit your information:</h3>
+  <form class="form" method="POST" action="/farmers/<%= farmer._id %>?_method=PUT">
 
-<body class="container-fluid">
-  <header>
-    <!-- INCLUDE PARTIALS HERE -->
-    <% include ../partials/header %>
-  </header>
+    <% include ../partials/farmer-form %>
 
-  <main>
-    <div>
-      <h3>Edit your information:</h3>
-      <!-- TODO: GET FORM INFO AND CHANGE THE ACTION AND CLASS HEREg -->
-      <form class="form" method="POST" action="/<%= farmer._id %>?_method=PUT">
-        <!-- INCLUDE PARTIAL FOR FORM HERE HERE -->
-        <!-- <% include ../partials/%> -->
+    <a href="/farmers/<%= farmer._id %>" class="btn btn-primary">Back</a>
+    <button type="submit" class="btn btn-success">Save</button>
 
-        <a href="/farmers/<%= farmer._id %>" class="btn btn-primary">Back</a>
-        <button type="submit" class="btn btn-success">Save</button>
-      </form>
-    </div>
-  </main>
-
-  <footer>
-    <% include ../partials/footer %>
-  </footer>
-</body>
-</html>
+  </form>
+</div>
