--- a/views/partials/farmer-form.ejs
+++ b/views/partials/farmer-form.ejs
@@ -8,6 +8,15 @@
 </div>
 
 <div class="form-group">
+  <label for="farm_name">Farm Name</label>
+  <input type="text"
+         class="form-control"
+         id="farm_name"
+         name="farm_name"
+         value="<%= farmer.farm_name %>">
+</div>
+
+<div class="form-group">
   <label for="email">Email</label>
   <input type="text"
          class="form-control"
@@ -49,25 +58,14 @@
 <div class="form-group">
   <label for="zipcode">Zipcode</label>
   <input type="text"
-         pattern=
+         pattern="\d{5,5}?"
          class="form-control"
          id="zipcode"
          name="zipcode"
          value="<%= farmer.address.zipcode %>" >
 </div>
 
-
 <div class="form-group">
-  <label for="farm_name">Farm Name</label>
-  <input type="text"
-         class="form-control"
-         id="farm_name"
-         name="farm_name"
-         value="<%= farmer.farm_name %>">
-</div>
-
-<div class="form-group">
-  <h3>Details</h3>
   <label for="organic">Organic</label>
   <input type="checkbox"
          class="form-control"
