--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,7 +34,7 @@
 
     <div class="form-group">
       <label for="zipcode">Zipcode</label>
-      <input class="form-control" type="text" pattern="\d{5,5}?" name="zipcode" id="zipcode">
+      <input class="form-control" type="text" pattern="\d*" name="zipcode" id="zipcode">
     </div>
 
     <div class="form-group">
