--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-        <span class="glyphicon glyphicon glyphicon-leaf"></span>
+        <span class="glyphicon glyphicon glyphicon-apple"></span>
         <% if (currentFarmer) { %>
         <%= currentFarmer.farm_name %>
         <% } else { %>
