--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <img src="../images/olive_logo_project_3.gif">
     <h1><%= title %></h1>
 
     <p>Welcome to <%= title %>!</p>
