--- a/views/farmers/edit.ejs
+++ b/views/farmers/edit.ejs
@@ -7,5 +7,12 @@
     <a href="/farmers/<%= farmer._id %>" class="btn btn-primary">Back</a>
     <button type="submit" class="btn btn-success">Save</button>
 
+    <div class="cancel row">
+      <div class="col-md-6">
+        <h3>Delete Account</h3>
+        <button type="submit" class="btn btn-md btn-danger">Delete</button>
+      </div>
+    </div>
+
   </form>
 </div>
