--- a/views/partials/farmer-form.ejs
+++ b/views/partials/farmer-form.ejs
@@ -4,7 +4,8 @@
          class="form-control"
          id="name"
          name="name"
-         value="<%= farmer.name %>">
+         value="<%= farmer.name %>"
+         required>
 </div>
 
 <div class="form-group">
@@ -13,7 +14,8 @@
          class="form-control"
          id="farm_name"
          name="farm_name"
-         value="<%= farmer.farm_name %>">
+         value="<%= farmer.farm_name %>"
+         required>
 </div>
 
 <div class="form-group">
@@ -22,7 +24,8 @@
          class="form-control"
          id="email"
          name="email"
-         value="<%= farmer.email %>">
+         value="<%= farmer.email %>"
+         required>
 </div>
 
 <div class="form-group">
@@ -33,7 +36,8 @@
          class="form-control"
          id="street"
          name="street"
-         value="<%= farmer.address.street %>">
+         value="<%= farmer.address.street %>"
+         required>
 </div>
 
 <div class="form-group">
@@ -43,7 +47,8 @@
          class="form-control"
          id="city"
          name="city"
-         value="<%= farmer.address.city %>">
+         value="<%= farmer.address.city %>"
+         required>
 </div>
 
 <div class="form-group">
@@ -52,7 +57,8 @@
          class="form-control"
          id="state"
          name="state"
-         value="<%= farmer.address.state %>">
+         value="<%= farmer.address.state %>"
+         required>
 </div>
 
 <div class="form-group">
@@ -62,7 +68,8 @@
          class="form-control"
          id="zipcode"
          name="zipcode"
-         value="<%= farmer.address.zipcode %>" >
+         value="<%= farmer.address.zipcode %>"
+         required>
 </div>
 
 <div class="form-group">
