--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,1 @@
-<p class="text-center text-muted">&copy; Copyright 2015 Farm Connect</p>
+<p class="text-center text-muted">&copy;Copyright 2015 | WDI | Farm Connect</p>
