--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,3 +15,23 @@ p {
 a {
   color: #00B7FF;
 }
+
+h1 {
+  color: white;
+}
+
+.text-muted {
+  color: white;
+}
+
+h2 {
+  color: white;
+}
+
+h3 {
+  color: white;
+}
+
+label {
+  color: white;
+}
