--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,24 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwJZcpHfGvTwdAk5HNVPzctrm-l3qiv_4"
+  type="text/javascript"></script>
+  <script>
+    function initialize() {
+      var mapProp = {
+        center:new google.maps.LatLng(32.9605,-83.1132),
+        zoom:7,
+        mapTypeId:google.maps.MapTypeId.ROADMAP
+      };
+          var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+        }
+        google.maps.event.addDomListener(window, 'load', initialize);
+  </script>
   </head>
   <body>
     <h1><%= title %></h1>
 
     <p>Welcome to <%= title %>!</p>
-
+    <div id="googleMap" style="width:600px;height:480px;"></div>
   </body>
 </html>
