--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,6 @@
         <input class="form-control" type="password" name="password" id="password">
       </div>
 
-      <input class="btn btn-default" type="submit">
+      <input class="btn btn-default btn-lg" type="submit">
     </form>
 </div>
