--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<h1><%= title %></h1>
-
-<p>Welcome to <%= title %>!</p>
+<h1>Welcome to <%= title %>!</h1>
+<img src= "images/arrows.png" alt= "arrow_logo"> <img src= "images/arrows.png" alt= "arrow_logo">
+<!-- <p>Welcome to <%= title %>!</p> -->
 
