--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,6 +44,9 @@ a {
   font-size: 1.2em;
 }
 
+.navbar-brand:hover{
+  color: #00B7FF !important;
+}
 .navbar-default .navbar-nav>li>a:hover {
   color: #00B7FF;
 }
