--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,24 +3,64 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwJZcpHfGvTwdAk5HNVPzctrm-l3qiv_4"
   type="text/javascript"></script>
   <script>
-    function initialize() {
-      var mapProp = {
-        center:new google.maps.LatLng(32.9605,-83.1132),
-        zoom:7,
-        mapTypeId:google.maps.MapTypeId.ROADMAP
-      };
-          var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+    var geocoder;
+      var map;
+      function initialize() {
+        geocoder = new google.maps.Geocoder();
+        var latlng = new google.maps.LatLng(32.9605,-83.5);
+        var mapOptions = {
+          zoom: 7,
+          center: latlng
         }
-        google.maps.event.addDomListener(window, 'load', initialize);
+        map = new google.maps.Map(document.getElementById("map"), mapOptions);
+      }
+
+      function codeAddress() {
+        var address = document.getElementById("address").value;
+        geocoder.geocode( { 'address': address}, function(results, status) {
+          if (status == google.maps.GeocoderStatus.OK) {
+            map.setCenter(results[0].geometry.location);
+            var marker = new google.maps.Marker({
+                map: map,
+                position: results[0].geometry.location
+            });
+          } else {
+            alert("Geocode was not successful for the following reason: " + status);
+          }
+        });
+      }
+
   </script>
   </head>
   <body>
-    <h1><%= title %></h1>
+  <div class = "container">
+    <div class = "row">
+      <div class = "col-lg-4 col-lg-offset-4">
+        <!-- MAYBE SOME CSS ANIMATION HERE -->
+        <h5>Search for farmers near you by inputing your address here:</h5>
+      </div>
+    </div>
+    <div class ="row">
+      <div class = "col-lg-5 col-lg-offset-4">
+        <input id="address" class = "form-control" type="search" placeholder="Coleman River Rd, Clayton, GA 30525">
+      </div>
+      <div class = "dropdown col-lg-2">
+       <input id="radius" class = "form-control" type="search" placeholder="15 miles">
+      </div>
 
-    <p>Welcome to <%= title %>!</p>
-    <div id="googleMap" style="width:600px;height:480px;"></div>
-  </body>
+      <div class = "col-lg-1">
+       <button class="btn btn-default" type="button" onclick="initialize(), codeAddress()">Find a farmer!</button>
+
+      </div>
+    </div>
+  </div>
+  <!-- TODO MAP NEEDS PADDING -->
+  <div id="map" class = "col-lg-offset-1" style="width: 450px; height: 500px;"></div>
+</body>
+
 </html>
+
