--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,21 @@
+<div class= "container">
 <h1><%= title %></h1>
 
 <p>Welcome to <%= title %>!</p>
 <img src="./images/arrows.png">
-<div><p>
-Yes, why should you buy locally? What are the benefits?
-  1. Locally grown food tastes and looks better. The crops are picked at their peak, and farmstead products like cheeses and are hand-crafted for best flavor.
-  2. Local food is better for you. The shorter the time between the farm and your table, the less likely it is that nutrients will be lost from fresh food.
 
+<div class="or-spacer-vertical left">
+  <div class="mask"></div>
+</div>
 
-</p></div>
+<h2>What are the benefits?</h2>
 
+<div class= "facts">
+  <ul>
+<li> Locally grown food tastes and looks better. </li>
+<li> Local food is better for you. The shorter the time between the farm and your table, the less likely it is that nutrients will be lost.</li>
+<li>  Local food is safe. There's a unique kind of assurance that comes from looking a farmer in the eye at farmers' market or driving by the fields where your food comes from.</li>
+  </ul>
+</div>
+
+</div>
