--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,7 @@ body {
 
 h1, h2, h3, label {
   color: white;
+  text-align: center;
 }
 
 h4 {
@@ -25,6 +26,17 @@ a {
 
 .container {
   padding-bottom: 50px;
+}
+
+ul {
+  color: white;
+}
+
+
+
+.facts {
+  width: 550px;
+  background-color:
 }
 
 /**********************/
@@ -97,6 +109,29 @@ a {
 
 img {
   opacity: .8;
+  margin-bottom: 30px;
+  margin-top: 15px;
 }
 
+.or-spacer-vertical {
+  display:inline-block;
+  margin-top:100px; margin-left:100px; width:100px;
+  position:relative;
+}
+  .mask {
+    overflow: hidden;
+    width:20px;
+    height:200px;
+    //outline:1px solid pink;
+  }
+
+  &.left .mask: {
+    content:'';
+    display:block;
+    margin-left:-20px;
+    width:20px;
+    height:100%;
+    border-radius:12px / 125px;
+    box-shadow:0 0 8px black;
+  }
 
