--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,11 @@
 <div class= "container">
 <h1><%= title %></h1>
 
-<p>Welcome to <%= title %>!</p>
+<h5> "We pick it, you click it!" </h5>
 <img src="./images/arrows.png">
+<div class= "shovel">
+<img src="./images/shovel.png">
+</div>
 
 <div class="or-spacer-vertical left">
   <div class="mask"></div>
@@ -14,7 +17,7 @@
   <ul>
 <li> Locally grown food tastes and looks better. </li>
 <li> Local food is better for you. The shorter the time between the farm and your table, the less likely it is that nutrients will be lost.</li>
-<li>  Local food is safe. There's a unique kind of assurance that comes from looking a farmer in the eye at farmers' market or driving by the fields where your food comes from.</li>
+<li> Local food is safe. There's a unique kind of assurance that comes from looking a farmer in the eye at farmers' market or driving by the fields where your food comes from.</li>
   </ul>
 </div>
 
