--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,6 @@
 <meta charset="UTF-8">
+<link href='https://fonts.googleapis.com/css?family=Mrs+Sheppards|Amaranth' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Mrs+Sheppards' rel='stylesheet' type='text/css'>
 <title>Farm Connect</title>
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
