--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <% include partials/head %>
+    <!-- put API stuff -->
   </head>
 
   <body class="container-fluid">
