Changes to signup and edit forms. Created phone field and added to Farmer  schema.

--- a/views/farmers/edit.ejs
+++ b/views/farmers/edit.ejs
@@ -1,18 +1,9 @@
-<div>
-  <h3>Edit your information:</h3>
-  <form class="form" method="POST" action="/farmers/<%= farmer._id %>?_method=PUT">
-
-    <% include ../partials/farmer-form %>
-
-    <a href="/farmers/<%= farmer._id %>" class="btn btn-primary">Back</a>
-    <button type="submit" class="btn btn-success">Save</button>
-
-    <div class="cancel row">
-      <div class="col-md-6">
-        <h3>Delete Account</h3>
-        <button type="submit" class="btn btn-md btn-danger">Delete</button>
-      </div>
-    </div>
-
-  </form>
+<div class="container">
+  <h3>EDIT YOUR INFORMATION</h3>
 </div>
+
+<form class="form" method="POST" action="/farmers/<%= farmer._id %>?_method=PUT">
+
+  <% include ../partials/farmer-form %>
+
+</form>
