--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,6 +86,10 @@ a {
   box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
 
+.cancel {
+  margin-top: -15px;
+}
+
 /*********************/
 /****** FOOTER *******/
 .footer-area {
