--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,7 +8,7 @@
         <h4> * All fields are required.</h4>
 
         <div class="col-md-6">
-        <h3>Information:</h3>
+        <h3>Information</h3>
           <div class="form-group">
             <label for="name">Name:</label>
             <input class="form-control well" type="text" name="name" id="name" required autofocus>
@@ -19,25 +19,27 @@
             <input class="form-control" type="text" name="farm_name" id="farm_name" required>
           </div>
 
-         <div class="form-group">
+          <div class="form-group">
+            <label for="farm_name">Phone Number:</label>
+            <input class="form-control" type="tel" name="phone" id="phone"
+                   pattern="^\d{3}-\d{3}-\d{4}$" placeholder="XXX-XXX-XXXX" required>
+          </div>
+
+          <div class="form-group">
             <label for="email">Email:</label>
-            <input class="form-control" type="text" name="email" id="email" required>
+            <input class="form-control" type="email" name="email" id="email"
+                   placeholder="example@domain.com" required>
           </div>
 
           <div class="form-group">
             <label for="password">Password:</label>
             <input class="form-control" type="password" name="password" pattern=".{8,}" title="Password must be eight or more characters" id="password" required>
           </div>
-
-          <div class="form-group col-sm-3">
-            <label for="organic">Organic:</label>
-            <input class="form-control" type="checkbox" name="organic" id="organic">
-          </div>
         </div>
 
         <div class="col-md-6">
           <div class="form-group">
-          <h3>Address:</h3>
+          <h3>Address</h3>
             <label for="street">Street:</label>
             <input class="form-control" type="text" name="street" id="street" required>
           </div>
@@ -55,6 +57,11 @@
           <div class="form-group">
             <label for="zipcode">Zipcode:</label>
             <input class="form-control" type="text" pattern="\d{5,5}?" title="Zipcode must be five digits. Numbers only" name="zipcode" id="zipcode" required>
+          </div>
+
+          <div class="form-group">
+            <label for="organic">Organic:</label>
+            <input class="form-control" type="checkbox" name="organic" id="organic">
           </div>
         </div>
       </div>
