Fixed footer to stay in bottom. Changed styles for login, edit, and sigup. Fixed delete function.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
   <head>
     <% include partials/head %>
   </head>
-  <body>
+  <body class="content">
     <header>
       <% include partials/header %>
     </header>
@@ -12,10 +12,8 @@
       <%- body %>
     </main>
 
-    <footer class="footer">
-      <% include partials/footer %>
-    </footer>
 
+    <div class="push"></div>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript">
     function scrollPage() {
@@ -26,4 +24,7 @@
     scrollPage();
     </script>
   </body>
+  <footer class="footer">
+      <% include partials/footer %>
+  </footer>
 </html>
