--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,29 @@
-<div>
-  <h2>Login</h2>
-    <form method="post" action="/login">
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input class="form-control" type="text" name="email" id="email">
-      </div>
+<div class="row login">
+  <form method="post" action="/login">
+    <div class="col-md-3"></div>
+    <div class="login-form col-md-6">
+      <h2>Login</h2>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input class="form-control" type="text" name="email" id="email">
+          </div>
+        </div>
 
-      <div class="form-group">
-        <label for="email">Password</label>
-        <input class="form-control" type="password" name="password" id="password">
+        <div class="col-sm-6">
+          <div class="form-group">
+            <label for="email">Password</label>
+            <input class="form-control" type="password" name="password" id="password">
+          </div>
+        </div>
       </div>
-
-      <input class="btn btn-default btn-lg" type="submit">
-    </form>
+        <div class="row">
+          <div class="col-md-3">
+            <input class="btn btn-default btn-lg" type="submit">
+          </div>
+        </div>
+    </div>
+    <div class="col-md-4"></div>
+  </form>
 </div>
