--- a/views/partials/farmer-form.ejs
+++ b/views/partials/farmer-form.ejs
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="authform">
-    <form class="form" method="POST" action="/farmers/<%= farmer._id %>?_method=PUT">
-      <div class="row">
+    <div class="row">
+      <form class="form" method="POST" action="/farmers/<%= farmer._id %>?_method=PUT">
         <div class="row">
           <h4>PLEASE NOTE: All fields are required.</h4>
           <div class="col-md-6">
@@ -77,13 +77,18 @@
             <a href="/farmers/<%= farmer._id %>" class="btn btn-primary btn-lg">Back</a>
             <button type="submit" class="btn btn-success btn-lg">Save</button>
           </div>
-          <div class="cancel col-md-6">
-            <h3>Delete Account</h3>
-            <button type="delete" class="btn btn-md btn-danger">Delete</button>
-          </div>
+      </form>
+
+          <form method="POST" action="/farmers/<%= farmer._id %>?_method=DELETE">
+              <div class="cancel col-md-6">
+                <h3>Delete Account</h3>
+                <button type="delete" class="btn btn-md btn-danger">Delete</button>
+              </div>
+          </form>
         </div>
-      </div>
-    </form>
+    </div>
   </div>
 </div>
+
+
 
