--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,5 @@
 <meta charset="UTF-8">
-<link href='https://fonts.googleapis.com/css?family=Mrs+Sheppards|Amaranth' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Mrs+Sheppards' rel='stylesheet' type='text/css'>
-<title>Farm Connect</title>
+<link href='https://fonts.googleapis.com/css?family=Mrs+Sheppards|Amaranth|Ultra' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Comfortaa:700|Righteous' rel='stylesheet' type='text/css'><title>Farm Connect</title><link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
