--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,2 @@
 <p class="text-center text-muted">&copy; Copyright 2015 Farm Connect</p>
+<!-- <script type="text/javascript" src = "../../node_modules/jquery/src/jquery"></script> -->
