--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,7 +122,12 @@
 
       <h5> "We pick it, you click it!" </h5>
 
-      <div class="imgWrap">
+
+<div class="row">
+
+
+  <div class="col-xs-6">
+    <div class="imgWrap">
        <img src="./images/arrows.png">
         <div class= "imgDescription">
             <ul>
@@ -132,16 +137,20 @@
             </ul>
           </div>
         </div>
-
+      </div>
+<div class="col-xs-6">
       <div class="imgWrap_Shovel">
        <img src="./images/shovel.png">
         <div class= "imgDescription_Shovel">
           <ul>
-      <li> Locally grown food tastes and looks better. </li>
+      <li> Farmers should think carefully about their operations and which opportunities might suit them best.</li>
+      <li> Marketing takes time and resources although it can bring higher prices. </li>
+      <li> With Farm connect, farmers can both strengthen their communities and their businesses</li>
            </ul>
           </div>
         </div>
-
+        </div>
+</div>
       <div class="or-spacer-vertical left">
         <div class="mask"></div>
       </div>
