--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,9 +123,10 @@
 
         <h5> "We pick it, you click it!" </h5>
 
-        <div class="imgWrap">
-         <img src="./images/arrows.png">
-          <div class= "imgDescription">
+         <div class="col-xs-6">
+    <div class="imgWrap">
+       <img src="./images/arrows.png">
+        <div class= "imgDescription">
             <ul>
               <li> Locally grown food tastes and looks better. </li>
               <li> Local food is better for you. The shorter the time between the farm and your table, the less likely it is that nutrients will be lost.</li>
@@ -133,16 +134,19 @@
             </ul>
           </div>
         </div>
-
-        <div class="imgWrap_Shovel">
-         <img src="./images/shovel.png">
-          <div class= "imgDescription_Shovel">
-            <ul>
-              <li> Locally grown food tastes and looks better. </li>
-            </ul>
+      </div>
+<div class="col-xs-6">
+      <div class="imgWrap_Shovel">
+       <img src="./images/shovel.png">
+        <div class= "imgDescription_Shovel">
+          <ul>
+      <li> Farmers should think carefully about their operations and which opportunities might suit them best.</li>
+      <li> Marketing takes time and resources although it can bring higher prices. </li>
+      <li> With Farm connect, farmers can both strengthen their communities and their businesses</li>
+           </ul>
           </div>
         </div>
-
+        </div>
         <div class="or-spacer-vertical left">
           <div class="mask"></div>
         </div>
