--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,19 +10,15 @@ body {
   background-repeat: no-repeat;
 }
 
-
-h1, h2, h3, label {
+h1, h2, h3, h4, label {
   color: white;
-  text-align: center;
 }
 
 h1 {
   font-family: "Ultra", serif;
   font-size: 4em;
   color: #75142B;
-}
-h4 {
-  color: white;
+  text-align: center;
 }
 
 h5 {
@@ -138,6 +134,14 @@ ul {
 }
 
 /*********************/
+/****** PROFILE ******/
+.profile {
+  padding: 40px;
+  border-radius: 5px;
+  background-color: rgba(0,0,0,0.8);
+}
+
+/*********************/
 /****** FOOTER *******/
 .push {
   height: 80px;
@@ -183,7 +187,7 @@ img {
     box-shadow:0 0 8px black;
   }
 
-/*********************/
+/******************************/
 /****** Hover Animation *******/
 
 .imgWrap {
