Comments on how to use google api to calculate distance for users and farmers

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,6 +58,8 @@
               // console.log(farmer);
               var address = farmer.address.street + ' ' + farmer.address.city + ' ' +farmer.address.state + ' ' + farmer.address.zipcode;
               codeAddress(address);
+              //if farmer within 10 miles
+              // $('div ul').append('<li>' + farmer + '</li>');
             }
           }
         });
