Changed font styles, signup/edit pages background. More changes needed.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,7 +19,7 @@
     <script type="text/javascript">
     function scrollPage() {
       $('html, body').animate({
-        scrollTop: $('#name').offset().top
+        scrollTop: $('#form').offset().top
         }, 600);
     }
     scrollPage();
