--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,7 @@
-<div class="container">
+<div id="form" class="container">
   <h2>Registration</h2>
 </div>
-<div class="wrapper">
+<!-- <div class="wrapper"> -->
   <div class="authform">
     <form method="post" action="/signup">
       <div class="row left">
@@ -73,4 +73,5 @@
       </div>
     </form>
   </div>
-</div>
+<!-- </div> -->
+
