--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,31 +1,35 @@
+@import url(https://fonts.googleapis.com/css?family=Dosis:400,500,600,300|Neucha);
 html, body {
   height: 100%;
+  -webkit-font-smoothing: antialiased;
+}
+html {
+  background: url('../images/apples.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   position: absolute;
   top: 0; bottom: 0; left: 0; right: 0;
-  background: url('../images/farm.jpg');
-  background-blend-mode: screen;
-  background-repeat: no-repeat;
-}
-
-h1, h2, h3, h4, label {
   color: white;
 }
 
+h3, h4, h5 {
+  color: white;
+  font-family: 'Neucha', cursive;
+}
+
 h1 {
-  font-family: "Ultra", serif;
-  font-size: 4em;
-  color: #75142B;
+  font-family: 'Neucha', cursive;
+  font-size: 6em;
+  color: #fff;
   text-align: center;
 }
 
-h5 {
-  font-family: 'Mrs Sheppards', cursive;
+h2, h5 {
+  font-family: 'Neucha', cursive;
   font-size: 3em;
   text-align: center;
-  color: #9b1b57;
 }
 
 p {
@@ -56,29 +60,31 @@ ul {
 }
 
 .content {
+  font-size: 14px
+  font-family: "Dosis", sans-serif;
   min-height: 100%;
   height: auto !important;
   position: relative;
   margin: 0 auto 0;
-  background-color: rgba(202,195,193, 0.6);
+  background-color: rgba(0, 0, 0, 0.5);
+
 }
 
 /**********************/
 /******* NAVBAR *******/
 .navbar {
   padding: 10px 100px;
-  background-color: rgba(1, 1, 1, 0.3);
+  background-color: transparent;
   border: 0;
-  border-bottom: 1px solid;
-  border-color: #666666;
+  border-color: transparent;
   border-radius: 0;
 }
 
 .navbar-default .navbar-brand,
 .navbar-default .navbar-nav>li>a {
   color: white;
-  font-size: 1.2em;
-  font-family: "Righteous", cursive;
+  font-size: 1.6em;
+  font-family: "Dosis", cursive;
 }
 
 .navbar-brand:hover{
@@ -96,10 +102,11 @@ ul {
 .authform {
   padding: 40px;
   margin: auto auto;
-  background-color: rgba(255, 93, 0, 0.5 );
+  background-color: rgba(255, 255, 255, 0.2 );
   border-radius: 5px;
   max-width: 80%;
   min-height: auto;
+  margin-bottom: 40px;
 }
 
 .login {
