--- a/views/index.ejs
+++ b/views/index.ejs
@@ -119,10 +119,13 @@
   <body>
     <div class= "container">
       <div class="row">
-        <h1><%= title %></h1>
-
+        <div class="row">
+          <div class="col-lg-6 col-lg-offset-3">
+            <h1><%= title %></h1>
+             <hr>
+          </div>
+        </div>
         <h5> "We pick it, you click it!" </h5>
-
         <div class="col-xs-6">
           <div class="imgWrap">
             <img src="./images/arrows.png">
