Added products to signup and edit forms

--- a/views/farmers/show.ejs
+++ b/views/farmers/show.ejs
@@ -7,6 +7,7 @@
       <p><b>Phone: </b><%= farmer.phone %></p>
       <p><b>Location: </b><%= farmer.address.street %> <%= farmer.address.city %>, <%= farmer.address.state %> <%= farmer.address.zipcode %></p>
       <p><b>Organic: </b><%= farmer.details.organic %></p>
+      <p><b>Products: </b><%= farmer.details.products.meat.beef %></p>
     </div>
 
     <a href="/farmers" class="btn btn-primary">Back</a>
